[workspace]
members = [
    "day*", "tools",
]
resolver = "2"

[workspace.dependencies]
glam = "0.25.0"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.51"
nom = "7.1.3"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
itertools = "0.12.0"
tools = { path = "./tools", version = "0.1.0-dev" }